pixmapdir=$(datadir)/pixmaps/linphone
dist_pixmap_DATA= \
	linphone.png linphone-banner.png \
	linphone.icns

iconsdir=$(datadir)/icons/hicolor
if BUILD_WIN32
	dist_icons_DATA=index.theme
endif

appiconsdir=$(iconsdir)/48x48/apps
dist_appicons_DATA= linphone.png

status48iconsdir=$(iconsdir)/48x48/status
dist_status48icons_DATA= \
	linphone-micro-muted.png \
	linphone-speaker-muted.png \
	linphone-micro-enabled.png \
	linphone-speaker-enabled.png \
	linphone-status-online.png \
	linphone-status-away.png \
	linphone-status-donotdisturb.png \
	linphone-status-offline.png \
	linphone-chat-nothing.png \
	linphone-chat-new-message.png \
	linphone-chat-writing.png \
	linphone-chat-new-message-and-writing.png \
	linphone-call-status-incoming.png \
	linphone-call-status-outgoing.png \
	linphone-contact-bookmarked.png \
	linphone-contact-not-bookmarked.png

statussvgiconsdir=$(iconsdir)/scalable/status
dist_statussvgicons_DATA= \
	svg/linphone-micro-muted.svg \
	svg/linphone-speaker-muted.svg \
	svg/linphone-micro-enabled.svg \
	svg/linphone-speaker-enabled.svg \
	svg/linphone-status-online.svg \
	svg/linphone-status-away.svg \
	svg/linphone-status-donotdisturb.svg \
	svg/linphone-status-offline.svg

actions48iconsdir=$(iconsdir)/48x48/actions
dist_actions48icons_DATA= \
	linphone-start-call2.png \
	linphone-show-dialer.png \
	linphone-add-call.png \
	linphone-start-call.png \
	linphone-start-chat.png \
	linphone-stop-call.png \
	linphone-hold-on.png \
	linphone-hold-off.png

